# gkeyfile-sharp

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.am~  NEWS  configure.in  gkeyfile-sharp-1.0.pc.in  gkeyfile-sharp.pc.in  gkeyfile-sharp.snk
GKeyFile/: AssemblyInfo.cs.in  GKeyFile.custom  GKeyFile.metadata  Makefile.am  gkeyfile-api.raw  gkeyfile-sharp.dll.config.in
GKeyFile/Tests/: Tests.csproj  Tests.sln  Tests.userprefs
GKeyFile/Tests/src/: GKeyFileTests.cs  test-keyfile.keyfile
